tests/neg-custom-args/captures/sep-counter.check
-- Error: tests/neg-custom-args/captures/sep-counter.scala:12:19 -------------------------------------------------------
12 |  def mkCounter(): Pair[Ref^, Ref^] =  // error
   |                   ^^^^^^^^^^^^^^^^
   |                   Separation failure in method mkCounter's result type Pair[box Ref^, box Ref^].
   |                   One part,  box Ref^, hides capabilities  {cap}.
   |                   Another part,  box Ref^,  captures capabilities  {cap}.
   |                   The two sets overlap at  cap of value c.
